--- a/todo
+++ b/todo
@@ -1,1 +1,2 @@
 REGEX in nginx (crazy crazy, could be implemented in our shell lmao) (location ~ \.(gif|jpg|png)$)
+types, headers et locations copy config
