--- a/todo
+++ b/todo
@@ -1,3 +1,5 @@
 REGEX in nginx (crazy crazy, could be implemented in our shell lmao) (location ~ \.(gif|jpg|png)$)
 types, headers et locations copy config
 root pour diriger par defaut
+erreur 406 si type pas dans Accept
+root et alias pour uri errors
