--- a/todo
+++ b/todo
@@ -3,3 +3,4 @@ types, headers et locations copy config
 root pour diriger par defaut
 erreur 406 si type pas dans Accept
 root et alias pour uri errors
+retrocompatibilite HTTP1.0
