Accept header handled, 406 error and cgi start

--- a/todo
+++ b/todo
@@ -1,6 +1,4 @@
 REGEX in nginx (crazy crazy, could be implemented in our shell lmao) (location ~ \.(gif|jpg|png)$)
-types, headers et locations copy config
-root pour diriger par defaut
-erreur 406 si type pas dans Accept
-root et alias pour uri errors
 retrocompatibilite HTTP1.0
+max_depth ?
+wildcards dans Accept et q=
