Infinite loop error corrected (I think) and clearer todo list

--- a/todo
+++ b/todo
@@ -1,9 +1,26 @@
 -Obligatoire
-retrocompatibilite HTTP1.0
-q=
-Opti location pour support wildcards et qu'un tour de boucle plutot que plusieurs find
+Sujet :
+"poll() (ou équivalent) doit vérifier la lecture et l’écriture en même temps." ?
+timeout serveur
+"Définir une liste de méthodes HTTP acceptées pour la route."
+"Activer ou désactiver le listing des répertoires"
+Server_name
+Max body size
+Nous:
+READ.ME
+Chunked encoding
+Body to
+Body Buf size
+Body infile
+Header buf size
+Ignore invalid headers
+Keepalive (req and time)
+Log not found
+Log sub
 
 -Potentiel
+retrocompatibilite HTTP1.0
 REGEX in nginx (crazy crazy, could be implemented in our shell lmao) (location ~ \.(gif|jpg|png)$)
 max_depth ?
 Equivalence lists pour Accept ? (genre html = text/html = text/htm = plain/text) et adapter en ft de q=
+Opti location pour support wildcards et qu'un tour de boucle plutot que plusieurs find
