--- a/todo
+++ b/todo
@@ -9,7 +9,8 @@ BUGS:
 Tester si commentaire de block skip block en SPACE MODE (je crois que j'ai oublié de le faire)
 
 NOUS:
-Refaire boolean methods en plus joli
+Meilleur print de location
+Copy methods location
 READ.ME
 Chunked encoding
 Body to
