Chunked encoding complete, with at send-time file reading
Sending can be done in 3 ways :
- No transfer encoding, just send the full body
- Transfer encoding, but no file to read. It splits the body into chunks that it sends one by one.
- Transfer encoding with a file to read (GET). It reads the file chunk by chunks and sends it each time.

--- a/todo
+++ b/todo
@@ -3,13 +3,13 @@ SUJET :
 "poll() (ou équivalent) doit vérifier la lecture et l’écriture en même temps." ?
 timeout serveur
 Max body size
+Disable POST according to methods
 
 BUGS:
 Tester si commentaire de block skip block en SPACE MODE (je crois que j'ai oublié de le faire)
 
 NOUS:
 READ.ME
-Chunked encoding (chunked but no infile specified, chunked while reading infile)
 Body to
 Body Buf size
 Body infile
