--- a/todo
+++ b/todo
@@ -27,3 +27,4 @@ REGEX in nginx (crazy crazy, could be implemented in our shell lmao) (location ~
 max_depth ?
 Equivalence lists pour Accept ? (genre html = text/html = text/htm = plain/text) et adapter en ft de q=
 Opti location pour support wildcards et qu'un tour de boucle plutot que plusieurs find
+Gérer requêtes POST en CGI (comme Nginx)
