--- a/todo
+++ b/todo
@@ -5,6 +5,7 @@ timeout serveur
 Max body size
 Disable POST according to methods
 DELETE
+Pouvoir lire requete très grosse (Content-length, erreur si body et pas content-length)
 
 BUGS:
 Valgrind bugs
@@ -20,6 +21,7 @@ Keepalive (time)
 Log not found
 Log sub
 Server_name
+Wildcard dans methods (peut-être géré, je sais plus)
 Allow /.. in directory listing ? (idk, seems dangerous)
 
 -Potentiel
