Json filed couldnt pass through Chunked Transfer Encoding for some reason and only sometimes too

--- a/todo
+++ b/todo
@@ -1,6 +1,6 @@
 -Obligatoire
 SUJET :
-Upload files
+Upload files (Bouton 'add a meme' ? qui permet de transmettre un fichier)
 Handle clients again
 DELETE
 
