Full account management :)
Cookies are no longer created by JS and are fully managed by the server with Set-Cookie header.
Disconnecting is made through a DELETE method, and not a POST.
Session management is done through a .session file at the root of the repo.
This file associates an auth key to an account name (stored in .usr)
Sessions are added every time, but are only removed at the end due to file management crap (might need to be improved).
Anyway, that's done

--- a/todo
+++ b/todo
@@ -19,8 +19,10 @@ Log sub
 Server_name
 Wildcard dans methods (peut-être géré, je sais plus)
 Allow /.. in directory listing ? (idk, seems dangerous)
+Gerer le cas de + de 10 comptes
 
 -Potentiel
+Expiration de cookies de session en local
 retrocompatibilite HTTP1.0
 REGEX in nginx (crazy crazy, could be implemented in our shell lmao) (location ~ \.(gif|jpg|png)$)
 max_depth ?
