A new server now writes over an existing one with the same port
If a server is open with port 8080, creating a new server on this same port will write inside the old server block instead of creating a new one.
That is obviously bad practice, but a nice memory save

--- a/todo
+++ b/todo
@@ -15,6 +15,9 @@ Server_name
 Allow /.. in directory listing ? (idk, seems dangerous)
 Gerer le cas de + de 10 comptes
 
+CONFIG:
+un serveur pour ecouter sur plusieurs ports
+
 -Potentiel
 Expiration de cookies de session en local
 retrocompatibilite HTTP1.0
