Recv and send checkers

--- a/todo
+++ b/todo
@@ -6,6 +6,9 @@ Delete files
 BUGS:
 
 NOUS:
+Log (on off) -> all errors
+Log_important (on off) -> fatal errors (5xx and fatal c++ err like failed send or failed accept)
+Log_errors -> client and server errors
 READ.ME
 Body to
 Body infile
