--- a/todo
+++ b/todo
@@ -6,6 +6,7 @@ Delete files
 BUGS:
 
 NOUS:
+LOG -> iterer simplement, et appeler log pour chaque cas trouve afin de log dans les dif fichiers
 add_header
 READ.ME
 Body to
