README.md lmaooooooooooooooooooo

--- a/todo
+++ b/todo
@@ -4,21 +4,16 @@ Upload files (Bouton 'add a meme' ? qui permet de transmettre un fichier)
 Delete files
 
 BUGS:
+ne lancer qu'une fois serveur par port
 
 NOUS:
-READ.ME
-Server_name
+log fatal
 Body to
 Body infile
 Keepalive (time)
 Gerer le cas de + de 10 comptes
 
 CONFIG:
-server 8080 localhost {}
-server p=8080 s=localhost {}
-server : {}
-server :8080 {}
-server bonjour: {}
 
 -Potentiel
 Expiration de cookies de session en local
